<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.senla.firstactivity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="150dp"
        android:text="@string/main_title"
        android:textSize="@dimen/title_dim"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMainSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_entry"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMainSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_registration"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMainAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="100dp"
        android:text="@string/main_btn_about"
        android:textAllCaps="false"
        android:textSize="20sp" />
</LinearLayout>
